Bugfix - Login failing + Logout Dropdown weird
What
=================
Login/registration pages were messing up since the incorrect classname
was used in the driver under `config\auth.php`.
Dropdown for the user account and logout button was weird, misaligned
and had a hideous background. Usual Bootstrap.

Ticket: #4

--- a/resources/assets/sass/_common.scss
+++ b/resources/assets/sass/_common.scss
@@ -2,7 +2,8 @@
 *,
 .form-control,
 .btn,
-.navbar-toggle {
+.navbar-toggle,
+.dropdown-menu {
 	border-radius: 0;
 }
 
